@@ -2,7 +2,7 @@
 
 // Pandora FMS - the Flexible Monitoring System
 // ============================================
-// Copyright (c) 2008 Artica Soluciones Tecnologicas, http://www.artica.es
+// Copyright (c) 2009 Artica Soluciones Tecnologicas, http://www.artica.es
 // Please see http://pandora.sourceforge.net for full contribution list
 
 // This program is free software; you can redistribute it and/or
@@ -18,9 +18,9 @@
 
 //Pandora Version
 if (!isset ($build_version))
-	$build_version="PC081027";
+	$build_version="PC090224";
 if (!isset ($pandora_version))
-	$pandora_version="v2.0";
+	$pandora_version="v2.1";
 
 // This is directory where placed "/attachment" directory, to upload files stores. 
 // This MUST be writtable by http server user, and should be in pandora root. 
