@@ -50,8 +50,8 @@ INSERT INTO `tconfig` VALUES
 (5,'days_compact','15'),
 (6,'graph_res','5'),
 (7,'step_compact','1'),
-(8,'db_scheme_version','2.0'),
-(9,'db_scheme_build','PD80901'),
+(8,'db_scheme_version','2.1'),
+(9,'db_scheme_build','PD090224'),
 (13,'show_unknown','0'),
 (14,'show_lastalerts','1'),
 (15,'style','pandora'),
